@@ -69,6 +69,9 @@ RELEASE 0.07 -
 
   - Make top-relative '#/dir' lookups work like '#dir'.
 
+  - Fix for relative CPPPATH directories in subsidiary SConscript files
+    (broken in 0.06).
+
   From Steven Knight:
 
   - Fix so that -c -n does *not* remove the targets!
